--- a/README.adoc
+++ b/README.adoc
@@ -1,43 +1,40 @@
-= Spring Framework on Google Cloud MySQL Sample
+## Spring Boot Project
 
-This code sample demonstrates how to connect to a MySQL Google Cloud SQL instance using the link:../../spring-cloud-gcp-starters/spring-cloud-gcp-starter-sql-mysql[Spring Framework on Google Cloud MySQL Starter].
+This sample Spring Boot REST API application is part of a Terraform project to create a website template with a three-tier architecture and a microservices approach on Google Cloud Platform. It connects to a MySQL database and retrieves a list of users.
 
-You will create an instance, a database within the instance, populate the database and then query it.
+This code is based on the sample project Google Cloud Platform Spring Boot MySQL Sample: https://github.com/GoogleCloudPlatform/spring-cloud-gcp/tree/main/spring-cloud-gcp-samples/spring-cloud-gcp-sql-mysql-sample.
 
-You can also explore the Spring Framework on Google Cloud MySQL Starter in the https://codelabs.developers.google.com/codelabs/cloud-spring-petclinic-cloudsql/index.html[Spring Pet Clinic using Cloud SQL] codelab.
+### Requirements
 
-== Setup
+* Java 17 or higher
+* Maven 3.9 or higher
 
-image:http://gstatic.com/cloudssh/images/open-btn.svg[link=https://ssh.cloud.google.com/cloudshell/editor?cloudshell_git_repo=https%3A%2F%2Fgithub.com%2FGoogleCloudPlatform%2Fspring-cloud-gcp&cloudshell_open_in_editor=spring-cloud-gcp-samples/spring-cloud-gcp-sql-mysql-sample/README.adoc]
+### Installation
 
-1. Follow https://cloud.google.com/sql/docs/mysql/quickstart[these instructions] to set up a Google Cloud Project with billing enabled.
+To install this project, clone the repository and run `mvn install`.
 
-2. Create a Google Cloud MySQL instance from the https://console.cloud.google.com/sql/instances[Google Cloud Console Cloud SQL page].
+### Usage
 
-3. Still within the Google Cloud Console SQL page, create a new database in the instance from the "Databases" section.
-If you decided to set a root password for your instance footnoteref:[note, Google Cloud SQL allows for creating MySQL instances without a password, while still remaining safe, as the connection is using Cloud SDK authentication and encrypted communication: see docs on https://cloud.google.com/sql/docs/mysql/sql-proxy[Cloud SQL proxy] and https://cloud.google.com/sql/docs/mysql/connect-external-app#java[the java socketFactory], which is used in spring-cloud-gcp to create the connection!], then don't forget to take note of your root password, as you will need it in the next step!
+To start the development server, run `mvn spring-boot:run`. The app will be available at `http://localhost:8080`.
 
-4. Open the link:src/main/resources/application.properties[application.properties] file and replace *[database-name]* with the name of the database you created in step 3 and *[instance-connection-name]* with the instance connection name of the instance you created in step 1.
-+
-If you set a root password, add the `spring.datasource.password` property with the root password as the value.
-+
-If you would like to use a different user, set the `spring.datasource.username` property appropriately.
+To build the production version of the app, run `mvn build`. The built files will be placed in the `target` directory.
 
-5. https://cloud.google.com/sdk/gcloud/reference/auth/application-default/login[If you are authenticated in the Cloud SDK], your credentials will be automatically found by the Spring Boot Starter for Google Cloud SQL.
-+
-Alternatively, https://console.cloud.google.com/iam-admin/serviceaccounts[create a service account from the Google Cloud Console] and download its private key.
-Then, uncomment the `spring.cloud.gcp.sql.credentials.location` property in the link:src/main/resources/application.properties[application.properties] file and fill its value with the path to your service account private key on your local file system, prepended with `file:`.
+### Features
 
-6. Run `$ mvn clean install` from the root directory of the project.
+This project includes the following features:
 
-== Running the application
+* Retrieves a list of users
 
-You can run the `SqlApplication` Spring Boot app by running the following command in the root directory of this sample
-app (spring-cloud-gcp-samples/spring-cloud-gcp-sql-mysql-sample):
+### Documentation
 
-`$ mvn spring-boot:run`
+For more information on how to use this project, please see the [documentation]([https://github.com/GoogleCloudPlatform/spring-cloud-gcp/tree/main/spring-cloud-gcp-samples/spring-cloud-gcp-sql-mysql-sample]).
 
-The database will be populated based on the link:src/main/resources/schema.sql[schema.sql] and link:src/main/resources/data.sql[data.sql] files.
+### Support
 
-When the application is up, navigate to http://localhost:8080/getTuples in your browser, or use the `Web Preview`
-button in Cloud Shell to preview the app on port 8080. This will print the contents of the `users` table.
+If you have any questions or problems with this project, please feel free to open an issue on GitHub (https://github.com/silvermx).
+
+### Roadmap
+
+Here are some ideas for future features:
+
+* NA
